--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kids School</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/style.css">
+        <script src="https://kit.fontawesome.com/aca258b525.js" crossorigin="anonymous"></script>
     </head>
 
-    <body>
+    <body class="quicksand-font">
+
+        <header>
+
+            <!-- navigation bar -->
+            <nav class="nav-container">
+                <div class="title-container">
+                    <img src="assets/logo.png" alt="" class="logo">
+                    <h1 class="nav-title">SCHOOL</h1>
+                </div>
+
+                <ol class="nav-links">
+                    <li class="nav-link"><a href="" class="link1">Home</a></li>
+                    <li class="nav-link"><a href="" class="link2">About</a></li>
+                    <li class="nav-link"><a href="" class="link3">Facilities</a></li>
+                    <li class="nav-link"><a href="" class="link4">Admission</a></li>
+                </ol>
+                <button class="nav-btn">Contact</button>
+                <i class="fa-solid fa-bars"></i>
+            </nav>
+        </header>
+
 
     </body>
 
