--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
                 <button class="nav-btn">Contact</button>
                 <i class="fa-solid fa-bars"></i>
             </nav>
+
+
+
+            <section class="banner">
+                <div class="banner-info-container">
+                    <div class="info-title">
+                        <p>
+                            <span id="empowering">Empowering
+                            </span><br>
+                            <span id="students">students from small</span><br>
+                            <span id="age">age </span><span id="vision">towards vision</span>
+                        </p>
+                    </div>
+                    <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make their
+                        Unique Contribution in a Diverse and Dynamic World.</p>
+                    <button class="banner-btn">Enroll Now</button>
+                </div>
+                <div>
+                    <img src="assets/hero-kids.png" alt="" class="banner-img">
+                </div>
+            </section>
+
         </header>
 
 
