--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <body class="quicksand-font">
 
         <header>
-
             <!-- navigation bar -->
             <nav class="nav-container">
                 <div class="title-container">
@@ -34,7 +33,7 @@
             </nav>
 
 
-
+            <!-- banner section -->
             <section class="banner">
                 <div class="banner-info-container">
                     <div class="info-title">
@@ -53,8 +52,48 @@
                     <img src="assets/hero-kids.png" alt="" class="banner-img">
                 </div>
             </section>
-
         </header>
+
+        <main>
+            <section class="curriculum">
+                <h2 class="c-title">Standard Curriculum</h2>
+                <div class="curriculum-card-container">
+
+                    <div class="curriculum-card c-card-1">
+                        <img src="assets/kinder.png" alt="">
+                        <h4 class="c-card-title">Kinder (3-6) Years</h4>
+                        <p class="c-card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <a href="" class="c-card-link1">Read More</a>
+                    </div>
+
+                    <div class="curriculum-card c-card-2">
+                        <img src="assets/elementary.png" alt="">
+                        <h4 class="c-card-title">Elementary School</h4>
+                        <p class="c-card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <a href="" class="c-card-link2">Read More</a>
+                    </div>
+
+                    <div class="curriculum-card c-card-3">
+                        <img src="assets/middle.png" alt="">
+                        <h4 class="c-card-title">Middle (10-16) Years</h4>
+                        <p class="c-card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <a href="" class="c-card-link3">Read More</a>
+                    </div>
+                </div>
+                <div class="pre-next">
+                    <div><span id="previous">&lt</span></div>
+                    <div><span id="next">&gt</span></div>
+                </div>
+                <!-- <i class="fa-solid fa-circle-chevron-right"></i><i class="fa-solid fa-circle-chevron-right"></i> -->
+
+            </section>
+        </main>
 
 
     </body>
