Standard Curriculum section complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <li class="nav-link"><a href="" class="link4">Admission</a></li>
                 </ol>
                 <button class="nav-btn">Contact</button>
-                <i class="fa-solid fa-bars"></i>
+                <div class="menu-bar">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </nav>
 
 
@@ -86,13 +88,68 @@
                         <a href="" class="c-card-link3">Read More</a>
                     </div>
                 </div>
-                <div class="pre-next">
+                <!-- <div class="pre-next">
                     <div><span id="previous">&lt</span></div>
                     <div><span id="next">&gt</span></div>
+                </div> -->
+                <div class="pre-next-icon">
+                    <i class="fa-solid fa-circle-chevron-right fa-rotate-180 fa-2xl" style="color: #FFD43B;"></i><i
+                        class="fa-solid fa-circle-chevron-right fa-2xl" style="color: #FFD43B;"></i>
                 </div>
-                <!-- <i class="fa-solid fa-circle-chevron-right"></i><i class="fa-solid fa-circle-chevron-right"></i> -->
-
             </section>
+
+
+
+            <section class="stories">
+                <h2 class="story-title">Our Stories</h2>
+                <div class="story-container">
+
+                    <div class="main-story">
+                        <img src="assets/story-1.png" alt="">
+                        <p class="main-story-date">November 19, 2019</p>
+                        <h4>A fun toddler coloring training on
+                            classroom</h4>
+                        <p>Beautiful branding for changes by Never Now in Australia.
+                            changes is a platform for open discussion in an inclusive and
+                            collaborative environment, providing the...</p>
+                    </div>
+
+
+
+                    <div class="sub-story">
+                        <div class="sub-story1">
+                            <img src="assets/story-2.png" alt="">
+                            <p class="sub-story-date">November 19, 2019</p>
+                            <h4 class="sub-story-description">Find out if a school fits the
+                                family’s needs</h4>
+                        </div>
+
+                        <div class="sub-story2">
+                            <img src="assets/story-3.png" alt="">
+                            <p class="sub-story-date2">November 19, 2019</p>
+                            <h4 class="sub-story-description">Summer math & literacy
+                                centres for kids</h4>
+                        </div>
+
+                        <div class="sub-story3">
+                            <img src="assets/story-4.png" alt="">
+                            <p class="sub-story-date">September 10, 2019</p>
+                            <h4 class="sub-story-description">Classroom management
+                                techniques for new tutors</h4>
+                        </div>
+
+                        <div class="sub-story4">
+                            <img src="assets/story-5.png" alt="">
+                            <p class="sub-story-date">July 19, 2019</p>
+                            <h4 class="sub-story-description">Conversation rhymes
+                                improve kids listening</h4>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+
         </main>
 
 
