footer section done

--- a/index.html
+++ b/index.html
@@ -105,53 +105,115 @@
                 <div class="story-container">
 
                     <div class="main-story">
-                        <img src="assets/story-1.png" alt="">
-                        <p class="main-story-date">November 19, 2019</p>
-                        <h4>A fun toddler coloring training on
-                            classroom</h4>
-                        <p>Beautiful branding for changes by Never Now in Australia.
-                            changes is a platform for open discussion in an inclusive and
-                            collaborative environment, providing the...</p>
+                        <div class="ms"><img src="assets/story-1.png" alt=""></div>
+                        <div class="ms main-story-date">
+                            <p class="">November 19, 2019</p>
+                        </div>
+                        <div class="ms main-story-title">
+                            <p>A fun toddler coloring training on
+                                classroom</p>
+                        </div>
+                        <div class="ms main-story-description">
+                            <p>Beautiful branding for changes by Never Now in Australia.
+                                changes is a platform for open discussion in an inclusive and
+                                collaborative environment, providing the...</p>
+                        </div>
                     </div>
 
 
 
                     <div class="sub-story">
                         <div class="sub-story1">
-                            <img src="assets/story-2.png" alt="">
-                            <p class="sub-story-date">November 19, 2019</p>
-                            <h4 class="sub-story-description">Find out if a school fits the
-                                family’s needs</h4>
+                            <div class="ss story-img"><img src="assets/story-2.png" alt=""></div>
+                            <div class="ss sub-story-date">
+                                <p>November 19, 2019</p>
+                            </div>
+                            <div class="ss sub-story-description">
+                                <p>Find out if a school fits the
+                                    family’s needs</p>
+                            </div>
                         </div>
 
                         <div class="sub-story2">
-                            <img src="assets/story-3.png" alt="">
-                            <p class="sub-story-date2">November 19, 2019</p>
-                            <h4 class="sub-story-description">Summer math & literacy
-                                centres for kids</h4>
+                            <div class="ss1 story-img1"><img src="assets/story-3.png" alt="" class=""></div>
+                            <div class="ss1 sub-story-date2">
+                                <p class="">November 19, 2019</p>
+                            </div>
+                            <div class="ss1 sub-story-description">
+                                <p class="">Summer math & literacy
+                                    centres for kids</p>
+                            </div>
                         </div>
 
                         <div class="sub-story3">
-                            <img src="assets/story-4.png" alt="">
-                            <p class="sub-story-date">September 10, 2019</p>
-                            <h4 class="sub-story-description">Classroom management
-                                techniques for new tutors</h4>
+                            <div class="ss story-img"><img src="assets/story-4.png" alt=""></div>
+                            <div class="ss sub-story-date">
+                                <p>September 10, 2019</p>
+                            </div>
+                            <div class="ss sub-story-description">
+                                <p>Classroom management
+                                    techniques for new tutors</p>
+                            </div>
                         </div>
 
                         <div class="sub-story4">
-                            <img src="assets/story-5.png" alt="">
-                            <p class="sub-story-date">July 19, 2019</p>
-                            <h4 class="sub-story-description">Conversation rhymes
-                                improve kids listening</h4>
+                            <div class="ss story-img"><img src="assets/story-5.png" alt=""></div>
+                            <div class="ss sub-story-date">
+                                <p>July 19, 2019</p>
+                            </div>
+                            <div class="ss sub-story-description">
+                                <p>Conversation rhymes
+                                    improve kids listening</p>
+                            </div>
                         </div>
 
                     </div>
                 </div>
+                <div class="story-btn-container">
+                    <button class="story-btn"><a href="">View All</a></button>
+                </div>
             </section>
-
 
         </main>
 
+        <footer>
+            <marquee class="target" behavior="" direction="">Explore the future of kindergarten education at Super Duper
+                Kids:
+                innovative approaches & dedicated teaching for tomorrow's leaders. Join us!</marquee>
+            <div class="footer">
+
+                <div class="footer-info">
+                    <div class="footer-logo-container">
+                        <img src="assets/fi_15371027.png" class="f-logo" alt="">
+                        <h2 class="footer-title">Kids
+                            Education</h2>
+                    </div>
+                    <p class="footer-description">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon
+                        Bianca pan bacon pineapple
+                        Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                </div>
+
+                <div class="footer-links-container">
+                    <h4 class="footer-links-title">About School</h4>
+                    <div class="footer-links">
+                        <a class="footer-link" href="">Home</a>
+                        <a class="footer-link" href="">About</a>
+                        <a class="footer-link" href="">Facilities</a>
+                        <a class="footer-link" href="">Admission</a>
+                    </div>
+                </div>
+
+                <div class="footer-media-container">
+                    <h3 class="footer-media-title">Keep In Touch</h3>
+                    <div class="footer-media">
+                        <img src="assets/fb.png" alt="">
+                        <img src="assets/dribble.png" alt="">
+                        <img src="assets/twitter.png" alt="">
+                        <img src="assets/google+.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     </body>
 
