--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                         <div class="sub-story4">
                             <div class="ss story-img"><img src="assets/story-5.png" alt=""></div>
-                            <div class="ss sub-story-date">
+                            <div class="ss sub-story-date no4">
                                 <p>July 19, 2019</p>
                             </div>
                             <div class="ss sub-story-description">
@@ -177,8 +177,7 @@
         </main>
 
         <footer>
-            <marquee class="target" behavior="" direction="">Explore the future of kindergarten education at Super Duper
-                Kids:
+            <marquee>Explore the future of kindergarten education at our school:
                 innovative approaches & dedicated teaching for tomorrow's leaders. Join us!</marquee>
             <div class="footer">
 
