--- a/index.html
+++ b/index.html
@@ -64,27 +64,24 @@
                     <div class="curriculum-card c-card-1">
                         <img src="assets/kinder.png" alt="">
                         <h4 class="c-card-title">Kinder (3-6) Years</h4>
-                        <p class="c-card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="c-card-description">Kindergarten helps children develop social, emotional,
+                            problem-solving, and study skills and develop self-esteem.</p>
                         <a href="" class="c-card-link1">Read More</a>
                     </div>
 
                     <div class="curriculum-card c-card-2">
                         <img src="assets/elementary.png" alt="">
                         <h4 class="c-card-title">Elementary School</h4>
-                        <p class="c-card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="c-card-description">We try our best to improve student learning outcomes and
+                            performance.Participating in extracurricular activities is also in our system.</p>
                         <a href="" class="c-card-link2">Read More</a>
                     </div>
 
                     <div class="curriculum-card c-card-3">
                         <img src="assets/middle.png" alt="">
                         <h4 class="c-card-title">Middle (10-16) Years</h4>
-                        <p class="c-card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="c-card-description">We set targets for students like include academic goals, study
+                            habits, and critical thinking skills. We also guide them to choose their career path</p>
                         <a href="" class="c-card-link3">Read More</a>
                     </div>
                 </div>
@@ -187,9 +184,8 @@
                         <h2 class="footer-title">Kids
                             Education</h2>
                     </div>
-                    <p class="footer-description">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon
-                        Bianca pan bacon pineapple
-                        Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                    <p class="footer-description">Our School allows children to be introduced to the basic academic
+                        concepts in an interesting manner and without applying any pressure.</p>
                 </div>
 
                 <div class="footer-links-container">
