everything is done

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <div><span id="next">&gt</span></div>
                 </div> -->
                 <div class="pre-next-icon">
-                    <i class="fa-solid fa-circle-chevron-right fa-rotate-180 fa-2xl" style="color: #FFD43B;"></i><i
-                        class="fa-solid fa-circle-chevron-right fa-2xl" style="color: #FFD43B;"></i>
+                    <i class="fa-solid fa-circle-chevron-right fa-rotate-180 fa-2xl left" style="color: #FEA301;"></i><i
+                        class="fa-solid fa-circle-chevron-right fa-2xl right" style="color: #FEA301;"></i>
                 </div>
             </section>
 
