--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </main>
 
         <footer>
-            <marquee>Explore the future of kindergarten education at our school:
+            <marquee scrollamount="8" behavior="">Explore the future of kindergarten education at our school:
                 innovative approaches & dedicated teaching for tomorrow's leaders. Join us!</marquee>
             <div class="footer">
 
