everything is done

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                                 classroom</p>
                         </div>
                         <div class="ms main-story-description">
-                            <p>Beautiful branding for changes by Never Now in Australia.
-                                changes is a platform for open discussion in an inclusive and
-                                collaborative environment, providing the...</p>
+                            <p>Our classroom-based training includes lectures, discussions, group activities, and
+                                hands-on exercises. It allows for direct interaction between the instructor and
+                                learners, fostering collaboration, immediate feedback, and personalized guidance.</p>
                         </div>
                     </div>
 
